--- a/requirements.txt
+++ b/requirements.txt
@@ -1,170 +1,129 @@
-aiofiles==23.2.1
-aiohttp==3.9.5
+aiohappyeyeballs==2.4.3
+aiohttp==3.11.2
 aiosignal==1.3.1
-altair==5.3.0
 annotated-types==0.7.0
-anyio==4.4.0
-appnope==0.1.4
-asgiref==3.8.1
-asttokens==2.4.1
+anyio==4.6.2.post1
+asgiref==3.5.2
 async-timeout==4.0.3
-attrs==23.2.0
+attrs==24.2.0
 backoff==2.2.1
-bcrypt==4.1.3
-build==1.2.1
-cachetools==5.4.0
-certifi==2024.7.4
-charset-normalizer==3.3.2
-chroma-hnswlib==0.7.5
-chromadb==0.5.4
+bcrypt==4.2.1
+build==1.2.2.post1
+cachetools==5.5.0
+certifi==2024.8.30
+charset-normalizer==3.4.0
+chroma-hnswlib==0.7.6
+chromadb==0.5.20
 click==8.1.7
 coloredlogs==15.0.1
-comm==0.2.2
-contourpy==1.2.1
-cycler==0.12.1
 dataclasses-json==0.6.7
-debugpy==1.8.2
-decorator==5.1.1
-Deprecated==1.2.14
+Deprecated==1.2.15
 distro==1.9.0
-dnspython==2.6.1
-email_validator==2.2.0
+Django==4.1.3
+django-extensions==3.2.1
+django-filter==22.1
+djangorestframework==3.14.0
+djangorestframework-jsonapi==6.0.0
+durationpy==0.9
 exceptiongroup==1.2.2
-executing==2.0.1
-fastapi==0.111.1
-fastapi-cli==0.0.4
-ffmpy==0.3.2
-filelock==3.15.4
+fastapi==0.115.5
+filelock==3.16.1
 flatbuffers==24.3.25
-fonttools==4.53.1
-frozenlist==1.4.1
-fsspec==2024.6.1
-google-auth==2.32.0
-googleapis-common-protos==1.63.2
-gradio==4.38.1
-gradio_client==1.1.0
-grpcio==1.65.1
+frozenlist==1.5.0
+fsspec==2024.10.0
+google-auth==2.36.0
+googleapis-common-protos==1.66.0
+grpcio==1.68.0
 h11==0.14.0
-httpcore==1.0.5
-httptools==0.6.1
-httpx==0.27.0
-huggingface-hub==0.24.0
+httpcore==1.0.6
+httptools==0.6.4
+httpx==0.27.2
+httpx-sse==0.4.0
+huggingface-hub==0.26.2
 humanfriendly==10.0
-idna==3.7
-importlib_metadata==7.1.0
-importlib_resources==6.4.0
-ipykernel==6.29.5
-ipython==8.26.0
-jedi==0.19.1
-Jinja2==3.1.4
+idna==3.10
+importlib_metadata==8.5.0
+importlib_resources==6.4.5
+inflection==0.5.1
+jiter==0.7.1
 jsonpatch==1.33
 jsonpointer==3.0.0
-jsonschema==4.23.0
-jsonschema-specifications==2023.12.1
-jupyter_client==8.6.2
-jupyter_core==5.7.2
-kiwisolver==1.4.5
-kubernetes==30.1.0
-langchain==0.2.9
-langchain-community==0.2.7
-langchain-core==0.2.21
-langchain-openai==0.1.17
-langchain-text-splitters==0.2.2
-langchainhub==0.1.20
-langsmith==0.1.92
+kubernetes==31.0.0
+langchain==0.3.7
+langchain-community==0.3.7
+langchain-core==0.3.18
+langchain-openai==0.2.8
+langchain-text-splitters==0.3.2
+langsmith==0.1.143
 markdown-it-py==3.0.0
-MarkupSafe==2.1.5
-marshmallow==3.21.3
-matplotlib==3.9.1
-matplotlib-inline==0.1.7
+marshmallow==3.23.1
 mdurl==0.1.2
-mmh3==4.1.0
+mmh3==5.0.1
 monotonic==1.6
 mpmath==1.3.0
-multidict==6.0.5
+multidict==6.1.0
 mypy-extensions==1.0.0
-nest-asyncio==1.6.0
 numpy==1.26.4
 oauthlib==3.2.2
-onnxruntime==1.18.1
-openai==1.35.15
-opentelemetry-api==1.25.0
-opentelemetry-exporter-otlp-proto-common==1.25.0
-opentelemetry-exporter-otlp-proto-grpc==1.25.0
-opentelemetry-instrumentation==0.46b0
-opentelemetry-instrumentation-asgi==0.46b0
-opentelemetry-instrumentation-fastapi==0.46b0
-opentelemetry-proto==1.25.0
-opentelemetry-sdk==1.25.0
-opentelemetry-semantic-conventions==0.46b0
-opentelemetry-util-http==0.46b0
-orjson==3.10.6
+onnxruntime==1.20.1
+openai==1.54.4
+opentelemetry-api==1.28.2
+opentelemetry-exporter-otlp-proto-common==1.28.2
+opentelemetry-exporter-otlp-proto-grpc==1.28.2
+opentelemetry-instrumentation==0.49b2
+opentelemetry-instrumentation-asgi==0.49b2
+opentelemetry-instrumentation-fastapi==0.49b2
+opentelemetry-proto==1.28.2
+opentelemetry-sdk==1.28.2
+opentelemetry-semantic-conventions==0.49b2
+opentelemetry-util-http==0.49b2
+orjson==3.10.11
 overrides==7.7.0
-packaging==24.1
-pandas==2.2.2
-parso==0.8.4
-pexpect==4.9.0
-pillow==10.4.0
-platformdirs==4.2.2
-posthog==3.5.0
-prompt_toolkit==3.0.47
-protobuf==4.25.3
-psutil==6.0.0
-ptyprocess==0.7.0
-pure-eval==0.2.2
-pyasn1==0.6.0
-pyasn1_modules==0.4.0
-pydantic==2.8.2
-pydantic_core==2.20.1
-pydub==0.25.1
+packaging==24.2
+posthog==3.7.2
+propcache==0.2.0
+protobuf==5.28.3
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
+pydantic==2.9.2
+pydantic-settings==2.6.1
+pydantic_core==2.23.4
 Pygments==2.18.0
-pyparsing==3.1.2
 PyPika==0.48.9
-pyproject_hooks==1.1.0
+pyproject_hooks==1.2.0
 python-dateutil==2.9.0.post0
-python-dotenv==1.0.1
-python-multipart==0.0.9
-pytz==2024.1
-PyYAML==6.0.1
-pyzmq==26.0.3
-redis==5.0.7
-referencing==0.35.1
-regex==2024.5.15
+python-dotenv==0.21.0
+pytz==2022.6
+PyYAML==6.0.2
+redis==5.2.0
+regex==2024.11.6
 requests==2.32.3
 requests-oauthlib==2.0.0
-rich==13.7.1
-rpds-py==0.19.0
+requests-toolbelt==1.0.0
+rich==13.9.4
 rsa==4.9
-ruff==0.5.3
-semantic-version==2.10.0
 shellingham==1.5.4
 six==1.16.0
 sniffio==1.3.1
-SQLAlchemy==2.0.31
-stack-data==0.6.3
-starlette==0.37.2
-sympy==1.13.1
-tenacity==8.5.0
-tiktoken==0.7.0
-tokenizers==0.19.1
-tomli==2.0.1
-tomlkit==0.12.0
-toolz==0.12.1
-tornado==6.4.1
-tqdm==4.66.4
-traitlets==5.14.3
-typer==0.12.3
-types-requests==2.32.0.20240712
+SQLAlchemy==2.0.35
+sqlparse==0.4.3
+starlette==0.41.3
+sympy==1.13.3
+tenacity==9.0.0
+tiktoken==0.8.0
+tokenizers==0.20.3
+tomli==2.1.0
+tqdm==4.67.0
+typer==0.13.1
 typing-inspect==0.9.0
 typing_extensions==4.12.2
-tzdata==2024.1
-urllib3==2.2.2
-uvicorn==0.30.1
-uvloop==0.19.0
-watchfiles==0.22.0
-wcwidth==0.2.13
+tzdata==2022.6
+urllib3==2.2.3
+uvicorn==0.32.1
+uvloop==0.21.0
+watchfiles==0.24.0
 websocket-client==1.8.0
-websockets==11.0.3
-wrapt==1.16.0
-yarl==1.9.4
-zipp==3.19.2
+websockets==14.1
+wrapt==1.17.0
+yarl==1.17.1
+zipp==3.21.0
