--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+aiofiles==23.2.1
 aiohappyeyeballs==2.4.3
 aiohttp==3.11.2
 aiosignal==1.3.1
@@ -27,12 +28,15 @@ djangorestframework-jsonapi==6.0.0
 durationpy==0.9
 exceptiongroup==1.2.2
 fastapi==0.115.5
+ffmpy==0.4.0
 filelock==3.16.1
 flatbuffers==24.3.25
 frozenlist==1.5.0
 fsspec==2024.10.0
 google-auth==2.36.0
 googleapis-common-protos==1.66.0
+gradio==5.6.0
+gradio_client==1.4.3
 grpcio==1.68.0
 h11==0.14.0
 httpcore==1.0.6
@@ -45,6 +49,7 @@ idna==3.10
 importlib_metadata==8.5.0
 importlib_resources==6.4.5
 inflection==0.5.1
+Jinja2==3.1.4
 jiter==0.7.1
 jsonpatch==1.33
 jsonpointer==3.0.0
@@ -56,6 +61,7 @@ langchain-openai==0.2.8
 langchain-text-splitters==0.3.2
 langsmith==0.1.143
 markdown-it-py==3.0.0
+MarkupSafe==2.1.5
 marshmallow==3.23.1
 mdurl==0.1.2
 mmh3==5.0.1
@@ -80,6 +86,8 @@ opentelemetry-util-http==0.49b2
 orjson==3.10.11
 overrides==7.7.0
 packaging==24.2
+pandas==2.2.3
+pillow==11.0.0
 posthog==3.7.2
 propcache==0.2.0
 protobuf==5.28.3
@@ -88,11 +96,13 @@ pyasn1_modules==0.4.1
 pydantic==2.9.2
 pydantic-settings==2.6.1
 pydantic_core==2.23.4
+pydub==0.25.1
 Pygments==2.18.0
 PyPika==0.48.9
 pyproject_hooks==1.2.0
 python-dateutil==2.9.0.post0
 python-dotenv==0.21.0
+python-multipart==0.0.12
 pytz==2022.6
 PyYAML==6.0.2
 redis==5.2.0
@@ -102,6 +112,9 @@ requests-oauthlib==2.0.0
 requests-toolbelt==1.0.0
 rich==13.9.4
 rsa==4.9
+ruff==0.8.0
+safehttpx==0.1.1
+semantic-version==2.10.0
 shellingham==1.5.4
 six==1.16.0
 sniffio==1.3.1
@@ -113,17 +126,17 @@ tenacity==9.0.0
 tiktoken==0.8.0
 tokenizers==0.20.3
 tomli==2.1.0
+tomlkit==0.12.0
 tqdm==4.67.0
 typer==0.13.1
 typing-inspect==0.9.0
 typing_extensions==4.12.2
-tzdata==2022.6
+tzdata==2024.2
 urllib3==2.2.3
 uvicorn==0.32.1
 uvloop==0.21.0
 watchfiles==0.24.0
 websocket-client==1.8.0
-websockets==14.1
+websockets==12.0
 wrapt==1.17.0
 yarl==1.17.1
-zipp==3.21.0
